--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <body>
         
 
-
+        <div id="container">
+            
+        </div>
 
         <script type="text/javascript" src="js/main.js"></script>
     </body>
