--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <div id="numeri"></div>
         </div>
 
+        <div id="commento"></div>
+
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
